// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`UserStructuresDialog renders empty state when no structures configured 1`] = `
<div>
  <div
    data-testid="dialog"
  >
    <div
      data-testid="dialog-content"
    >
      <div
        data-testid="dialog-header"
      >
        <h2
          data-testid="dialog-title"
        >
          Manage Trading Structures
        </h2>
      </div>
      <div
        class="border border-overlay-subtle rounded-md p-4 mb-4 bg-background-void"
      >
        <p
          class="text-sm font-semibold text-text-emphasis mb-3"
        >
          Add Structure
        </p>
        <div
          class="flex gap-3 flex-wrap items-end"
        >
          <div
            class="flex-1 min-w-[160px]"
          >
            <label
              class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary mb-1 block"
            >
              Character
            </label>
            <div
              data-testid="select"
              data-value=""
            >
              <button
                data-testid="select-trigger-btn"
              >
                <div
                  class="bg-background-elevated border-overlay-strong text-text-emphasis"
                  data-testid="select-trigger"
                >
                  <span
                    data-testid="select-value"
                  >
                    Select character
                  </span>
                </div>
                <div
                  data-testid="select-content"
                >
                  <div
                    data-testid="select-item-456"
                    data-value="456"
                    role="option"
                  >
                    Test Character
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="flex-1 min-w-[200px]"
          >
            <label
              class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary mb-1 block"
            >
              Structure
            </label>
            <p
              class="text-xs text-text-muted italic"
            >
              Select a character first
            </p>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2 shrink-0"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-4 w-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Add
          </button>
        </div>
      </div>
      <p
        class="text-center text-text-secondary text-sm py-6"
      >
        No trading structures configured. Add one above to get started.
      </p>
    </div>
  </div>
</div>
`;

exports[`UserStructuresDialog renders loading state while fetching structures 1`] = `
<div>
  <div
    data-testid="dialog"
  >
    <div
      data-testid="dialog-content"
    >
      <div
        data-testid="dialog-header"
      >
        <h2
          data-testid="dialog-title"
        >
          Manage Trading Structures
        </h2>
      </div>
      <div
        class="border border-overlay-subtle rounded-md p-4 mb-4 bg-background-void"
      >
        <p
          class="text-sm font-semibold text-text-emphasis mb-3"
        >
          Add Structure
        </p>
        <div
          class="flex gap-3 flex-wrap items-end"
        >
          <div
            class="flex-1 min-w-[160px]"
          >
            <label
              class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary mb-1 block"
            >
              Character
            </label>
            <div
              class="flex items-center gap-2 text-text-muted text-sm"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-loader-circle h-4 w-4 animate-spin"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M21 12a9 9 0 1 1-6.219-8.56"
                />
              </svg>
               Loading characters...
            </div>
          </div>
          <div
            class="flex-1 min-w-[200px]"
          >
            <label
              class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary mb-1 block"
            >
              Structure
            </label>
            <p
              class="text-xs text-text-muted italic"
            >
              Select a character first
            </p>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2 shrink-0"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-4 w-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Add
          </button>
        </div>
      </div>
      <div
        class="flex items-center justify-center py-8"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-loader-circle h-6 w-6 animate-spin text-text-muted"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 12a9 9 0 1 1-6.219-8.56"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`UserStructuresDialog renders structures list correctly 1`] = `
<div>
  <div
    data-testid="dialog"
  >
    <div
      data-testid="dialog-content"
    >
      <div
        data-testid="dialog-header"
      >
        <h2
          data-testid="dialog-title"
        >
          Manage Trading Structures
        </h2>
      </div>
      <div
        class="border border-overlay-subtle rounded-md p-4 mb-4 bg-background-void"
      >
        <p
          class="text-sm font-semibold text-text-emphasis mb-3"
        >
          Add Structure
        </p>
        <div
          class="flex gap-3 flex-wrap items-end"
        >
          <div
            class="flex-1 min-w-[160px]"
          >
            <label
              class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary mb-1 block"
            >
              Character
            </label>
            <div
              data-testid="select"
              data-value=""
            >
              <button
                data-testid="select-trigger-btn"
              >
                <div
                  class="bg-background-elevated border-overlay-strong text-text-emphasis"
                  data-testid="select-trigger"
                >
                  <span
                    data-testid="select-value"
                  >
                    Select character
                  </span>
                </div>
                <div
                  data-testid="select-content"
                >
                  <div
                    data-testid="select-item-456"
                    data-value="456"
                    role="option"
                  >
                    Test Character
                  </div>
                </div>
              </button>
            </div>
          </div>
          <div
            class="flex-1 min-w-[200px]"
          >
            <label
              class="font-medium peer-disabled:cursor-not-allowed peer-disabled:opacity-70 text-xs text-text-secondary mb-1 block"
            >
              Structure
            </label>
            <p
              class="text-xs text-text-muted italic"
            >
              Select a character first
            </p>
          </div>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-sm text-sm transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 bg-[var(--color-primary-cyan)] text-[var(--color-bg-void)] shadow hover:bg-[var(--color-cyan-muted)] font-semibold h-9 px-4 py-2 shrink-0"
            disabled=""
          >
            <svg
              aria-hidden="true"
              class="lucide lucide-plus h-4 w-4 mr-2"
              fill="none"
              height="24"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M5 12h14"
              />
              <path
                d="M12 5v14"
              />
            </svg>
            Add
          </button>
        </div>
      </div>
      <div
        class="overflow-x-auto"
      >
        <div
          class="relative w-full overflow-auto"
        >
          <table
            class="w-full caption-bottom text-sm"
          >
            <thead
              class="[&_tr]:border-b [&_tr]:border-[var(--color-border-active)]"
            >
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted bg-background-void border-overlay-subtle"
              >
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Name
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Status
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Last Scanned
                </th>
                <th
                  class="h-10 px-2 text-left align-middle text-xs uppercase tracking-wider [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] font-bold text-text-emphasis"
                >
                  Actions
                </th>
              </tr>
            </thead>
            <tbody
              class="[&_tr:last-child]:border-0"
            >
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted border-overlay-subtle"
              >
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div>
                    <p
                      class="text-sm font-semibold text-text-emphasis"
                    >
                      Perimeter - Tranquility Trading Tower
                    </p>
                    <p
                      class="text-xs text-text-muted mt-0.5"
                    >
                      ID: 
                      1035466617946
                    </p>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] border-teal-success/30 text-teal-500 bg-status-success-tint"
                  >
                    Access OK
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-sm text-text-secondary"
                >
                  2/22/2026, 10:00:00 AM
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs"
                      title="Scan market"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-scan-search h-3.5 w-3.5 mr-1"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 7V5a2 2 0 0 1 2-2h2"
                        />
                        <path
                          d="M17 3h2a2 2 0 0 1 2 2v2"
                        />
                        <path
                          d="M21 17v2a2 2 0 0 1-2 2h-2"
                        />
                        <path
                          d="M7 21H5a2 2 0 0 1-2-2v-2"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="3"
                        />
                        <path
                          d="m16 16-1.9-1.9"
                        />
                      </svg>
                      Scan
                    </button>
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-8 rounded-sm px-3 text-xs text-rose-500 hover:text-rose-400"
                      title="Remove structure"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trash2 lucide-trash-2 h-3.5 w-3.5"
                        data-testid="DeleteIcon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 11v6"
                        />
                        <path
                          d="M14 11v6"
                        />
                        <path
                          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                        />
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                        />
                      </svg>
                    </button>
                  </div>
                </td>
              </tr>
              <tr
                class="border-b transition-colors hover:bg-interactive-hover data-[state=selected]:bg-muted border-overlay-subtle"
              >
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div>
                    <p
                      class="text-sm font-semibold text-text-emphasis"
                    >
                      No Access Structure
                    </p>
                    <p
                      class="text-xs text-text-muted mt-0.5"
                    >
                      ID: 
                      1035466617947
                    </p>
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="inline-flex items-center rounded-sm px-2.5 py-0.5 text-xs font-semibold transition-colors focus:outline-none focus:ring-1 focus:ring-[var(--color-primary-cyan)] border hover:border-[var(--color-border-active)] border-rose-danger/30 text-rose-500 bg-status-error-tint"
                  >
                    <svg
                      aria-hidden="true"
                      class="lucide lucide-triangle-alert h-3 w-3 mr-1"
                      fill="none"
                      height="24"
                      stroke="currentColor"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      width="24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3"
                      />
                      <path
                        d="M12 9v4"
                      />
                      <path
                        d="M12 17h.01"
                      />
                    </svg>
                    No Access
                  </div>
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px] text-sm text-text-secondary"
                >
                  Never
                </td>
                <td
                  class="p-2 align-middle [&:has([role=checkbox])]:pr-0 [&>[role=checkbox]]:translate-y-[2px]"
                >
                  <div
                    class="flex items-center gap-2"
                  >
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-[var(--color-border-active)] bg-transparent text-[var(--color-text-primary)] shadow-sm hover:bg-[var(--color-surface-elevated)] hover:border-[var(--color-primary-cyan)] h-8 rounded-sm px-3 text-xs"
                      title="Scan market"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-scan-search h-3.5 w-3.5 mr-1"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M3 7V5a2 2 0 0 1 2-2h2"
                        />
                        <path
                          d="M17 3h2a2 2 0 0 1 2 2v2"
                        />
                        <path
                          d="M21 17v2a2 2 0 0 1-2 2h-2"
                        />
                        <path
                          d="M7 21H5a2 2 0 0 1-2-2v-2"
                        />
                        <circle
                          cx="12"
                          cy="12"
                          r="3"
                        />
                        <path
                          d="m16 16-1.9-1.9"
                        />
                      </svg>
                      Scan
                    </button>
                    <button
                      class="inline-flex items-center justify-center gap-2 whitespace-nowrap font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-[var(--color-primary-cyan)] disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 hover:bg-[var(--color-surface-elevated)] h-8 rounded-sm px-3 text-xs text-rose-500 hover:text-rose-400"
                      title="Remove structure"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-trash2 lucide-trash-2 h-3.5 w-3.5"
                        data-testid="DeleteIcon"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M10 11v6"
                        />
                        <path
                          d="M14 11v6"
                        />
                        <path
                          d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
                        />
                        <path
                          d="M3 6h18"
                        />
                        <path
                          d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
                        />
                      </svg>
                    </button>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
